--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "week9",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "pg": "^8.13.1"
-  }
+  },
+  "description": ""
 }
